--- a/index.html
+++ b/index.html
@@ -1,119 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Swiper.js CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sujal Sharma - Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
-</head>
+
 <body>
-    <section class="banner">
-        <header>
-            <a href="#" class="logo">Sujal<span>Sharma</span></a>
+  <!-- Header -->
+  <header>
+    <a href="#" class="logo">Sujal<span>Sharma</span></a>
+    <div id="menu-icon" class="bx bx-menu"></div>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="dayNight">
+      <ion-icon name="moon-outline"></ion-icon>
+      <ion-icon name="sunny-outline"></ion-icon>
+    </div>
+  </header>
 
-            <div id="menu-icon" class="bx bx-menu"></div>
-
-            <nav class="navbar">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            </nav>
-            <div class="dayNight">
-                <ion-icon name="moon-outline"></ion-icon>
-                <ion-icon name="sunny-outline"></ion-icon>
-            </div>
-        </header>
-        <div class="logo-container">
-            <img src="images/IMG_1294.jpg" alt="Sujal Sharma" class="profile-image">
+  <!-- Hero Section -->
+  <section id="about" class="banner">
+    <div class="hero-container">
+      <div class="hero-text">
+        <h2>Hi, I'm a<span> </span></h2>
+        <h3 id="text"></h3>
+        <p>
+          Aspiring Computer Science Engineer focused on building modern, user-friendly web applications using
+          JavaScript, React, and Java. Passionate about technology and clean UI design.
+        </p>
+        <div class="hero-buttons">
+          <a href="#projects" class="btn">View Projects</a>
+          <a href="#contact" class="btn">Let's Chat</a>
         </div>
-        <div class="content">
-            <h2>I am a </a><span id="text">Coder</span></h2>
-            <p>"Aspiring computer science professional pursuing a B.Tech with a strong focus on front-end development and
-                Java programming. Enthusiastic about building user-friendly web interfaces and gaining deeper expertise in
-                software development using Java as my preferred language. Eager to apply my growing skills and knowledge
-                to real-world projects."</p>
-            <button>View Projects</button>
-            <button class="chat">Let's chat</button>
+      </div>
+      <div class="hero-image">
+        <img src="images/IMG_1294.jpg" alt="Sujal Sharma">
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-grid">
+      <div class="skill">
+        <img src="images/C++_Logo.svg.png" alt="HTML" />
+        <p>C++</p>
+      </div>
+      <div class="skill">
+        <img src="images/java.png" alt="Java" />
+        <p>Java</p>
+      </div>
+      <div class="skill">
+        <img src="images/python.png" alt="Java" />
+        <p>Python</p>
+      </div>
+      <div class="skill">
+        <img src="images/HTML5.png" alt="HTML" />
+        <p>HTML5</p>
+      </div>
+      <div class="skill">
+        <img src="images/CSS3.png" alt="CSS" />
+        <p>CSS3</p>
+      </div>
+      <div class="skill">
+        <img src="images/javascript.png" alt="JavaScript" />
+        <p>JavaScript</p>
+      </div>
+      <div class="skill">
+        <img src="images/react-js.png" alt="React" />
+        <p>React</p>
+      </div>
+      <div class="skill">
+        <img src="images/mysql.png" alt="MySQL" />
+        <p>MySQL</p>
+      </div>
+      <div class="skill">
+        <img src="images/git-github.png" alt="Git">
+        <p>Git</p>
+      </div>
+      <div class="skill">
+        <img src="images/GitHub.png" alt="Git">
+        <p>Github</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-grid">
+      <div class="project-card">
+        <img src="images/Screenshot 2025-03-10 at 11.30.57 PM.png" alt="FilmFlow">
+        <h3>FilmFlow</h3>
+        <p>Movie review web app where users can rate and review films.</p>
+        <div class="btn-group">
+          <a href="https://filmflow-1y2e7l8vh-knowsujals-projects.vercel.app/" class="btn">Live Demo</a>
+          <a href="https://github.com/Knowsujal/Filmflow" class="btn outline">Code</a>
         </div>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Programming:</strong> C/C++, Java, Python, HTML, CSS, JavaScript</li>
-            <li><strong>Tools & OS:</strong> Visual Studio, VS Code, Xcode</li>
-            <li><strong>Libraries/Frameworks:</strong> Boxicons, Google Fonts, Cloudflare, Swipebundle</li>
-            <li><strong>Database:</strong> MySQL</li>
-        </ul>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <!-- Project 1 -->
-                <div class="swiper-slide">
-                    <img src="images/Screenshot 2025-03-10 at 11.30.57 PM.png" alt="FilmFlow">
-                    <h3>FilmFlow</h3>
-                    <p>A movie review website where users can rate and review movies.</p>
-                </div>
-                <!-- Project 2 -->
-                <div class="swiper-slide">
-                    <img src="images/loginpage.png" alt="Animated Login Page">
-                    <h3>Animated Login Page</h3>
-                    <p>A fully animated login page with modern UI design.</p>
-                </div>
-                <!-- Project 3 -->
-                <div class="swiper-slide">
-                    <img src="images/Screenshot 2025-06-01 at 8.20.54 AM.png" alt="Tic Tac Toe">
-                    <h3>Tic-Tac-Toe Game</h3>
-                    <p>A simple Tic-Tac-Toe game using JavaScript.</p>
-                </div>
-                <!-- Project 4 -->
-                <div class="swiper-slide">
-                    <img src="images/Screenshot 2025-06-01 at 8.19.35 AM.png" alt="Stone Paper Scissor">
-                    <h3>Stone-Paper-Scissor Game</h3>
-                    <p>A fun game to play against the computer.</p>
-                </div>
-            </div>
-            <!-- Navigation buttons -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <!-- Pagination dots -->
-            <div class="swiper-pagination"></div>
+      </div>
+      <div class="project-card">
+        <img src="images/loginpage.png" alt="Login Page">
+        <h3>Animated Login Page</h3>
+        <p>A clean, animated login page built with CSS transitions.</p>
+        <div class="btn-group">
+          <a href="https://animated-oginpage.vercel.app/?" class="btn">Live Demo</a>
+          <a href="https://github.com/Knowsujal/Animated-Login-page" class="btn outline">Code</a>
         </div>
-    </section>
+      </div>
+      <!-- Add more cards as needed -->
+    </div>
+  </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <div class="contact-info">
-            <div class="contact-item">
-                <ion-icon name="mail-outline"></ion-icon>
-                <a href="mailto:sujalsharma497@gmail.com">sujalsharma497@gmail.com</a>
-            </div>
-            <div class="contact-item">
-                <ion-icon name="logo-linkedin"></ion-icon>
-                <a href="https://www.linkedin.com/in/sujal-sharma007sujal-sharma007/" target="_blank">LinkedIn</a>
-            </div>
-            <div class="contact-item">   
-                <ion-icon name="logo-github"></ion-icon> 
-                <a href="https://github.com/Knowsujal/" target="_blank">GitHub</a>
-            </div>   
-        </div>     
-    </section>
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <form id="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="_replyto" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  (function() {
+    // Initialize EmailJS with your PUBLIC KEY
+    emailjs.init("vb-hkJltUc28rbY0e");  // example: "Qwabc123xyz"
+  })();
+
+  document.getElementById("contact-form").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    emailjs.sendForm("service_yddpxu5", "template_7e2ph8a", this)
+      .then(() => {
+        alert("✅ Message sent successfully!");
+        this.reset();
+      }, (error) => {
+        console.error("FAILED...", error);
+        alert("❌ Failed to send message. Please try again later.");
+      });
+  });
+</script>
+
+    <div class="contact-links">
+      <a href="mailto:sujalsharma497@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/sujal-sharma007/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Knowsujal" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+  </section>
+
+  <!-- Scripts -->
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
