--- a/index.html
+++ b/index.html
@@ -15,20 +15,23 @@
 
 <body>
   <!-- Header -->
-  <header>
+  <header class="header">
     <a href="#" class="logo">Sujal<span>Sharma</span></a>
-    <div id="menu-icon" class="bx bx-menu"></div>
-    <nav class="navbar">
+
+    <div id="menu-icon" class="bx bx-menu">
+      <i class="fas fa-bars"></i>      
+    </div>
+    <nav class="navbar" id="navbar">
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#skills" class="nav-link">Skills</a></li>
+        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
     </nav>
     <div class="dayNight">
-      <ion-icon name="moon-outline"></ion-icon>
-      <ion-icon name="sunny-outline"></ion-icon>
+      <ion-icon name="moon-outline" class="moon"></ion-icon>
+      <ion-icon name="sunny-outline" class="sun"></ion-icon>
     </div>
   </header>
 
@@ -44,6 +47,7 @@
         </p>
         <div class="hero-buttons">
           <a href="#projects" class="btn">View Projects</a>
+          <a href="Resume/Sujal_Resume.pdf" target="_blank" class="btn">Resume</a>
           <a href="#contact" class="btn">Let's Chat</a>
         </div>
       </div>
@@ -58,7 +62,11 @@
     <h2>Skills</h2>
     <div class="skills-grid">
       <div class="skill">
-        <img src="images/C++_Logo.svg.png" alt="HTML" />
+        <img src="images/C_Programming_Language.svg" alt="C"/>
+        <p>C Programming</p>
+      </div>
+      <div class="skill">
+        <img src="images/C++_Logo.svg.png" alt="C++" />
         <p>C++</p>
       </div>
       <div class="skill">
