--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Sujal Sharma - Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -144,6 +145,13 @@
       <button type="submit" class="btn">Send Message</button>
     </form>
 
+    <div class="contact-links">
+      <a href="mailto:sujalsharma497@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/sujal-sharma007/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Knowsujal" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+  </section>
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script>
   (function() {
@@ -164,13 +172,6 @@
       });
   });
 </script>
-
-    <div class="contact-links">
-      <a href="mailto:sujalsharma497@gmail.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://www.linkedin.com/in/sujal-sharma007/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Knowsujal" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
-  </section>
 
   <!-- Scripts -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
